# gec-metrics

./: .readthedocs.yaml  README.md  prepare_meta_eval.sh  pyproject.toml
docs/: conf.py  index.rst
docs/develop/: metric.md
docs/getting_started/: analysis.md  install.md  meta_eval.md  metrics.md
gec_metrics/: __init__.py
gec_metrics/meta_eval/: __init__.py  gjg.py  gjg_test.py  seeda.py  seeda_test.py
gec_metrics/metrics/: __init__.py  base.py  errant.py  gleu.py  gotoscorer.py  green.py  impara.py  impara_test.py  scribendi.py  some.py  some_test.py
gec_metrics/utils/: gen_weight_for_goto.py  make_subset_reference.py
src/gec_metrics/analysis/: __init__.py
src/gec_metrics/analysis/attributor/: __init__.py  add.py  base.py  shapley.py  shapley_sampling.py  sub.py
src/gec_metrics/cli/: evaluate.py  gen_default_config.py
src/gec_metrics/meta_eval/: base.py  gjg.py  seeda.py
src/gec_metrics/metrics/: __init__.py  base.py  base_test.py  bertscore.py  ensemble.py  errant.py  green.py  pt_errant.py
