[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gec_metrics"
version = "0.0.1"
dependencies = [
  "transformers >= 4.39.0, ==4.*",
  "torch >= 2.3.0, ==2.*",
  "lmppl >= 0.3.1, ==0.*",
  "fuzzywuzzy >= 0.18.0, ==0.*",
  "scipy >= 1.11.3, ==1.*",
  "pytest >= 7.4.2, ==7.*",
  "bert-score >= 0.3.13, ==0.*",
  "errant >= 3.0.0, ==3.*",
  "gecommon@git+https://github.com/gotutiyan/gecommon"
]
requires-python = ">=3.9"
authors = [
    {name = "Takumi Goto"}
]
description = "A library for Grammatical Error Correction metrics."
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
make-subset-ref = "gec_metrics.utils.make_subset_reference:main"
m2-to-raw = "gec_metrics.utils.m2_to_raw:main"
gen-weights-for-goto = "gec_metrics.utils.gen_weight_for_goto:main"

[tool.pytest.ini_options]
python_files = [
    "*_test.py"
]

[tool.setuptools]
packages = ["gec_metrics"]