[project]
name = "gec-metrics"
version = "0.1.0"
description = "A library for Grammatical Error Correction evaluation."
readme = "README.md"
authors = [
    { name = "gotuiyan" }
]
requires-python = ">=3.11.0"
dependencies = [
    "bert-score>=0.3.13",
    "errant>=3.0.0",
    "fuzzywuzzy>=0.18.0",
    "gecommon>=0.1.0",
    "python-levenshtein>=0.26.1",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
